# MtgCardSearch

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: macos.yml  release.yml  ubuntu.yml  windows.yml
cmake/: code-coverage.cmake  package-managers.cmake  settings.cmake  sources.cmake
include/tmp/: tmp.hpp
resources/: resources.qrc
resources/qml/: main.qml  resources.qrc
src/: main.cpp
src/tmp/: tmp.cpp
test/: CMakeLists.txt  mainTest.cpp  tmpTest.cpp
tools/linux/: config.sh  docs.sh  format.sh  test.sh
